Fix flow editor test

--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -141,8 +141,8 @@
     var simulateResume = null;
 
     if (canSimulate) {
-      simulateStart = '/flow/simulate/{{object.id}}';
-      simulateResume = '/flow/simulate/{{object.id}}';
+      simulateStart = '/flow/simulate/{{object.id}}/';
+      simulateResume = '/flow/simulate/{{object.id}}/';
     }
 
     var config = {
