--- a/templates/flows/flow_results.haml
+++ b/templates/flows/flow_results.haml
@@ -50,7 +50,7 @@
 
     Highcharts.setOptions({
       global: {
-        timezoneOffset: -1 * {{utcoffset}}
+        timezoneOffset: -1 * parseInt('{{utcoffset}}')
       },
       lang: {
         thousandsSep: ','
